--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -26,13 +26,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "def vol(rad):\n",
-    "    pass"
+    "    vol = (4/3)*math.pi*(rad*rad*rad)\n",
+    "    return vol"
    ]
   },
   {
@@ -43,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "33.49333333333333"
+       "33.510321638291124"
       ]
      },
      "execution_count": 2,
@@ -66,27 +67,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    if num in range(low,high+1):\n",
+    "        return (f' {num} is in the range between {low} and {high}')\n",
+    "    else:\n",
+    "        return (f' {num} is not in the range between {low} and {high}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 7\n"
-     ]
+     "data": {
+      "text/plain": [
+       "' 5 is in the range between 2 and 7'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -103,19 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    if num in range(low,high+1):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +130,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,28 +158,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    d = {\"upper\":0, \"lower\":0}\n",
+    "    for char in s:\n",
+    "        if char.isupper():\n",
+    "            d[\"upper\"]+=1\n",
+    "        elif char.islower():\n",
+    "            d[\"lower\"]+=1\n",
+    "        else:\n",
+    "            pass\n",
+    "    print(\"Original String: \",s)\n",
+    "    print(\"No. of Upper case characters: \",d[\"upper\"])\n",
+    "    print(\"No. of Lower case characters: \",d[\"lower\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello', 'Mr.', 'Rogers,', 'how', 'are', 'you', 'this', 'fine', 'Tuesday?']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1 = 'Hello Mr. Rogers, how are you this fine Tuesday?'\n",
+    "string1.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "Original String:  Hello Mr. Rogers, how are you this fine Tuesday?\n",
+      "No. of Upper case characters:  4\n",
+      "No. of Lower case characters:  33\n"
      ]
     }
    ],
@@ -195,19 +230,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    mystr = ''.join(map(str,lst))\n",
+    "    return ' '.join(set(mystr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unique_list(lst):\n",
+    "    seen_numbers = []\n",
+    "    for number in lst:\n",
+    "        if number not in seen_numbers:\n",
+    "            seen_numbers.append(number)\n",
+    "    return seen_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +264,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,19 +286,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def multiply(numbers):  \n",
-    "    pass"
+    "    total = 1 # because anything multiplied by 1 returns itself\n",
+    "    for num in numbers:\n",
+    "        total *= num\n",
+    "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +308,7 @@
        "-24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,19 +329,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    s = s.replace(' ','')\n",
+    "    return (s == s[::-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +349,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,30 +379,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    \n",
+    "    # Create a set of the alphabet\n",
+    "    alphaset = set(alphabet)\n",
+    "    \n",
+    "    # Remove any spaces from the input string\n",
+    "    str1 = str1.replace(' ','')\n",
+    "    \n",
+    "    # Convert into all lowercase\n",
+    "    str1 = str1.lower()\n",
+    "    \n",
+    "    # Grab all unique letters from the string set()\n",
+    "    str1 = set(str1)\n",
+    "    print(str1)\n",
+    "    # alphabet set == string set input\n",
+    "    return str1 == alphaset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'h', 'u', 'n', 'b', 'j', 'k', 'a', 't', 'w', 'r', 's', 'm', 'v', 'x', 'g', 'p', 'l', 'd', 'c', 'o', 'f', 'q', 'z', 'y', 'e', 'i'}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -409,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
