--- a/05-Object Oriented Programming/04-OOP Challenge.ipynb
+++ b/05-Object Oriented Programming/04-OOP Challenge.ipynb
@@ -34,22 +34,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Account:\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self,owner,balance):\n",
+    "        \n",
+    "        self.owner = owner\n",
+    "        self.balance = balance\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f\"Account Owner: {self.owner} \\nAccount Balance: ${self.balance}\"\n",
+    "    \n",
+    "    \n",
+    "    def deposit(self,amount):\n",
+    "        \n",
+    "        self.balance = self.balance + amount\n",
+    "        print(\"We just added {} to your account\".format(amount))\n",
+    "        \n",
+    "    def withdraw(self,amount):\n",
+    "        \n",
+    "        if amount > self.balance:\n",
+    "            print(\"Funds Unavailable!\")\n",
+    "        else:\n",
+    "            self.balance = self.balance - amount\n",
+    "            print(f\"You've withdrawn ${amount} on your account, the remaining balance is ${self.balance}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Instantiate the class\n",
@@ -58,15 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account owner:   Jose\n",
-      "Account balance: $100\n"
+      "Account Owner: Jose \n",
+      "Account Balance: $100\n"
      ]
     }
    ],
@@ -77,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +103,7 @@
        "'Jose'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +124,7 @@
        "100"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deposit Accepted\n"
+      "We just added 50 to your account\n"
      ]
     }
    ],
@@ -137,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Withdrawal Accepted\n"
+      "You've withdrawn $75 on your account, the remaining balance is $75\n"
      ]
     }
    ],
@@ -154,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
