--- a/13-Web-Scraping/00-Guide-to-Web-Scraping.ipynb
+++ b/13-Web-Scraping/00-Guide-to-Web-Scraping.ipynb
@@ -1664,19 +1664,7 @@
    },
    "outputs": [],
    "source": [
-    "two_star_titles = []\n",
-    "\n",
-    "for n in range(1,51):\n",
-    "\n",
-    "    scrape_url = base_url.format(n)\n",
-    "    res = requests.get(scrape_url)\n",
-    "    \n",
-    "    soup = bs4.BeautifulSoup(res.text,\"lxml\")\n",
-    "    books = soup.select(\".product_pod\")\n",
-    "    \n",
-    "    for book in books:\n",
-    "        if len(book.select('.star-rating.Two')) != 0:\n",
-    "            two_star_titles.append(book.select('a')[1]['title'])"
+    "base"
    ]
   },
   {
